--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav class="mb-6">
             <ul class="flex justify-center space-x-4">
                 <li><a href="index.html" class="text-blue-600 hover:underline">Kalkulasi</a></li>
-                <li><a href="#" class="text-blue-600 hover:underline">Grafik</a></li>
+                <li><a href="https://www.appsheet.com/start/bd7d0c68-d130-4d85-b112-597b928f16e5" class="text-blue-600 hover:underline">Aplikasi Appsheet</a></li>
             </ul>
         </nav>
             <h1 class="text-3xl md:text-4xl font-bold text-blue-600 mb-4">Sistem Pengelolaan Inventori</h1>
